// Copyright 2019 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package recipes.build.findit.chromium.single_revision;

message InputProperties {
  // Identifies a builder in terms compatible with chromium_tests.
  // May eventually be replaced with luci-style identifiers i.e.
  // project/bucket/builder.
  message BuilderId {
    string master = 1;
    string builder = 2;
  }

  // The builder whose configuration the recipe should replicate for compilation
  // and testing.
  BuilderId target_builder = 1;

  // Map a canonical test suite name to a list of tests (names) within it.
  message TestNames {
    repeated string names = 1;
  }
  map<string, TestNames> tests = 2;

  // List of targets to compile. Useful when searching for the culprit of a
  // compile failure. This is not necessary when using the recipe for running
  // tests, as the compile targets are inferred from the test suites to run.
  repeated string compile_targets = 3;

  // By default the recipe should filter out tests not affected by the revision
  // being built. Set this to true to run all requested tests regardless.
  bool skip_analyze = 4;

  // Repeat the tests a number of times. If unset, defaults to 20. To avoid
  // running tests altogether, use `compile_targets` field instead of `tests`.
  int32 test_repeat_count = 5;

  // Test override for chromium_tests.builders. Only set during testing.
  // This is a json-encoded object.
  string test_override_builders = 6;
}
